--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" id="whole">
   <head>
     <meta charset="UTF-8" />
@@ -539,7 +539,7 @@
     <div class="form-wrapper">
       <form id="main-form">
         <div class="header-container">
-          <img class="header-logo" src="./img/benchmark-logo.jpeg" alt="logo" />
+          <img class="header-logo" src="./img/horizon-logo.png" alt="logo" />
           <div class="date-container">
             <label class="label" for="date">Date:</label>
             <input id="date" class="input form-field" type="date" />
